# analyase

./: Cargo.toml  config.toml  readme.md
src/: app.rs  config.rs  data_model.rs  main.rs
src/market_data/: mod.rs  websocket.rs
src/oms/: mod.rs  order.rs  position.rs
src/strategy/: mean_reversion.rs  mod.rs
src/utils/: channels.rs  logger.rs  mod.rs
