[package]
name = "analyase"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27.0"
egui = "0.27.0"
egui_plot = "0.27.0"

tokio = { version = "1.38.0", features = ["full"] } 

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = { version = "0.13.0", features = ["toml"] } 
toml = "0.8.12"

tungstenite = "0.21.0"
tokio-tungstenite = "0.21.0"
url = "2.5.0"
futures-util = "0.3.30" 

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] } # Added "env-filter" and "fmt" features


anyhow = "1.0.86"
thiserror = "1.0.61"

chrono = { version = "0.4.38", features = ["serde"] } 

parking_lot = "0.12.2" 

rand = "0.8.5" 
egui_plot = "0.27.0" 